unpackaged/main/default/objects/Vendor__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch lookup</description>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>