unpackaged/main/default/objects/Vendor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transportation</fullName>
                <default>true</default>
                <label>Transportation</label>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Sublease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>