unpackaged/main/default/objects/Vendor__c/listViews/Transportation_Vendors.listView-meta.xml
<ListView>
    <fullName>Transportation_Vendors</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Transportation</value>
    </filters>
    <label>Transportation Vendors</label>
</ListView>